--- a/src/js/components/ChoicePanel/ChoicePanel.scss
+++ b/src/js/components/ChoicePanel/ChoicePanel.scss
@@ -29,9 +29,9 @@
       color: #fff;
       width: 100%;
       text-align-last: left;
-      transition: all .2s ease-in-out;
+      transition: all .1s ease-in-out;
       &:hover {
-        transition: .2s ease-in-out;
+        transition: .1s ease-in-out;
         transform: scale(1.05);
       }
       &:active {
